Project

General

Profile

Actions

Bug #37654

closed

FAILED ceph_assert(info.history.same_interval_since != 0) in PG::start_peering_interval()

Added by Neha Ojha over 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
OSD
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2018-12-10T20:39:30.263 INFO:tasks.ceph.osd.0.smithi201.stderr:/build/ceph-14.0.1-1562-g5f72143/src/osd/PG.cc: In function 'void PG::start_peering_interval(OSDMapRef, const std::vector<int>&, int, const std::vector<int>&, int, ObjectStore::Transaction*)' thread 7efec24fe700 time 2018-12-10 20:39:30.262509
2018-12-10T20:39:30.263 INFO:tasks.ceph.osd.0.smithi201.stderr:/build/ceph-14.0.1-1562-g5f72143/src/osd/PG.cc: 6114: FAILED ceph_assert(info.history.same_interval_since != 0)
2018-12-10T20:39:30.266 INFO:tasks.ceph.osd.0.smithi201.stderr: ceph version 14.0.1-1562-g5f72143 (5f72143d3fa18f82c45782a89af603d2eeb69fe6) nautilus (dev)
2018-12-10T20:39:30.266 INFO:tasks.ceph.osd.0.smithi201.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x152) [0x55ba8dab831b]
2018-12-10T20:39:30.266 INFO:tasks.ceph.osd.0.smithi201.stderr: 2: (ceph::__ceph_assertf_fail(char const*, char const*, int, char const*, char const*, ...)+0) [0x55ba8dab84f6]
2018-12-10T20:39:30.266 INFO:tasks.ceph.osd.0.smithi201.stderr: 3: (PG::start_peering_interval(std::shared_ptr<OSDMap const>, std::vector<int, std::allocator<int> > const&, int, std::vector<int, std::allocator<int> > const&, int, ObjectStore::Transaction*)+0x1607) [0x55ba8dca7317]
2018-12-10T20:39:30.266 INFO:tasks.ceph.osd.0.smithi201.stderr: 4: (PG::RecoveryState::Reset::react(PG::AdvMap const&)+0x1a6) [0x55ba8dcaa8c6]
2018-12-10T20:39:30.267 INFO:tasks.ceph.osd.0.smithi201.stderr: 5: (boost::statechart::simple_state<PG::RecoveryState::Reset, PG::RecoveryState::RecoveryMachine, boost::mpl::list<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, (boost::statechart::history_mode)0>::react_impl(boost::statechart::event_base const&, void const*)+0x140) [0x55ba8dd0a2f0]
2018-12-10T20:39:30.267 INFO:tasks.ceph.osd.0.smithi201.stderr: 6: (PG::handle_advance_map(std::shared_ptr<OSDMap const>, std::shared_ptr<OSDMap const>, std::vector<int, std::allocator<int> >&, int, std::vector<int, std::allocator<int> >&, int, PG::RecoveryCtx*)+0x256) [0x55ba8dca9db6]
2018-12-10T20:39:30.267 INFO:tasks.ceph.osd.0.smithi201.stderr: 7: (OSD::advance_pg(unsigned int, PG*, ThreadPool::TPHandle&, PG::RecoveryCtx*)+0x2d1) [0x55ba8dc08d31]
2018-12-10T20:39:30.267 INFO:tasks.ceph.osd.0.smithi201.stderr: 8: (OSD::dequeue_peering_evt(OSDShard*, PG*, std::shared_ptr<PGPeeringEvent>, ThreadPool::TPHandle&)+0xa6) [0x55ba8dc0a6d6]
2018-12-10T20:39:30.267 INFO:tasks.ceph.osd.0.smithi201.stderr: 9: (PGPeeringItem::run(OSD*, OSDShard*, boost::intrusive_ptr<PG>&, ThreadPool::TPHandle&)+0x50) [0x55ba8de84900]
2018-12-10T20:39:30.267 INFO:tasks.ceph.osd.0.smithi201.stderr: 10: (OSD::ShardedOpWQ::_process(unsigned int, ceph::heartbeat_handle_d*)+0xbf5) [0x55ba8dbfeba5]
2018-12-10T20:39:30.268 INFO:tasks.ceph.osd.0.smithi201.stderr: 11: (ShardedThreadPool::shardedthreadpool_worker(unsigned int)+0x4ac) [0x55ba8e24c9dc]
2018-12-10T20:39:30.268 INFO:tasks.ceph.osd.0.smithi201.stderr: 12: (ShardedThreadPool::WorkThreadSharded::entry()+0x10) [0x55ba8e257a40]
2018-12-10T20:39:30.268 INFO:tasks.ceph.osd.0.smithi201.stderr: 13: (()+0x76db) [0x7efee81496db]

/a/nojha-2018-12-10_18:59:51-rados-master-distro-basic-smithi/3323936/


Related issues 3 (1 open2 closed)

Related to RADOS - Bug #57628: osd:PeeringState.cc: FAILED ceph_assert(info.history.same_interval_since != 0)In ProgressMatan Breizman

Actions
Is duplicate of RADOS - Bug #38294: osd/PG.cc: 6141: FAILED ceph_assert(info.history.same_interval_since != 0) during upgradeResolved02/13/2019

Actions
Copied to RADOS - Backport #41640: nautilus: FAILED ceph_assert(info.history.same_interval_since != 0) in PG::start_peering_interval()ResolvedNathan CutlerActions
Actions #1

Updated by Neha Ojha over 5 years ago

  • Priority changed from Normal to High

/a/nojha-2018-12-19_01:41:09-rados-master-distro-basic-smithi/3375485/

Actions #2

Updated by Josh Durgin over 4 years ago

  • Status changed from New to Can't reproduce
Actions #3

Updated by Greg Farnum over 4 years ago

  • Is duplicate of Bug #38294: osd/PG.cc: 6141: FAILED ceph_assert(info.history.same_interval_since != 0) during upgrade added
Actions #5

Updated by xie xingguo over 4 years ago

  • Assignee set to xie xingguo
Actions #6

Updated by Sage Weil over 4 years ago

  • Status changed from 12 to Pending Backport
  • Backport set to nautilus
Actions #7

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41640: nautilus: FAILED ceph_assert(info.history.same_interval_since != 0) in PG::start_peering_interval() added
Actions #8

Updated by xie xingguo over 4 years ago

  • Pull request ID set to 29835
Actions #9

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions #10

Updated by Matan Breizman over 1 year ago

  • Related to Bug #57628: osd:PeeringState.cc: FAILED ceph_assert(info.history.same_interval_since != 0) added
Actions

Also available in: Atom PDF